--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "bootstrap": "^4.1.3",
+    "react-router-dom": "^4.3.1" 
+  },
   "author": "",
   "license": "ISC"
 }
